--- a/apps/frontend/src/libs/components/button/button.module.css
+++ b/apps/frontend/src/libs/components/button/button.module.css
@@ -1,15 +1,39 @@
 .common-button {
+	position: relative;
 	width: 100%;
-	padding: 12px 24px;
+	padding: 12px 16px;
 	font-family: Barlow, sans-serif;
 	font-size: 18px;
 	color: white;
 	text-align: center;
-	background-color: var(--brand-green);
+	background-color: var(--brand-green-strong);
 	border: none;
-	border-radius: 12px;
+	border-radius: 8px;
+	box-shadow:
+		0 4px 8px -2px #0000000a,
+		0 2px 4px -2px #00000014;
 }
 
 .common-button:hover {
-	opacity: 0.8;
+	background-color: var(--brand-green-press);
+}
+
+.common-button:focus {
+	outline: none;
+	background-color: var(--brand-green-press);
+}
+
+.common-button:focus::after {
+	position: absolute;
+	inset: -4px;
+	content: "";
+	background: transparent;
+	border: 2px solid var(--brand-green-press);
+	border-radius: 12px;
+}
+
+.common-button:disabled {
+	background-color: var(--brand-green-press);
+	box-shadow: none;
+	opacity: 0.3;
 }
