--- a/apps/frontend/src/libs/components/button/styles.module.css
+++ b/apps/frontend/src/libs/components/button/styles.module.css
@@ -1,10 +1,10 @@
-.common-button {
+.button {
 	position: relative;
 	width: 100%;
 	padding: 12px 16px;
-	font-family: Barlow, sans-serif;
+	font-family: Inter, sans-serif;
 	font-size: 18px;
-	color: white;
+	color: var(--text);
 	text-align: center;
 	background-color: var(--brand-green-strong);
 	border: none;
@@ -12,18 +12,19 @@
 	box-shadow:
 		0 4px 8px -2px #0000000a,
 		0 2px 4px -2px #00000014;
+	transition: background-color 0.3s ease;
 }
 
-.common-button:hover {
+.button:hover {
 	background-color: var(--brand-green-press);
 }
 
-.common-button:focus {
+.button:focus {
 	outline: none;
 	background-color: var(--brand-green-press);
 }
 
-.common-button:focus::after {
+.button:focus::after {
 	position: absolute;
 	inset: -4px;
 	content: "";
@@ -32,7 +33,7 @@
 	border-radius: 12px;
 }
 
-.common-button:disabled {
+.button:disabled {
 	background-color: var(--brand-green-press);
 	box-shadow: none;
 	opacity: 0.3;
