--- a/apps/frontend/src/assets/css/fonts.css
+++ b/apps/frontend/src/assets/css/fonts.css
@@ -1,13 +1,13 @@
 @font-face {
-	font-family: "Inter";
-	src: url("../fonts/Inter-Regular.otf") format("opentype");
-	font-weight: 400;
+	font-family: Inter;
 	font-style: normal;
+	font-weight: 400;
+	src: url("../fonts/inter-regular.otf") format("opentype");
 }
 
 @font-face {
-	font-family: "Inter";
-	src: url("../fonts/Inter-Bold.otf") format("opentype");
-	font-weight: 700;
+	font-family: Inter;
 	font-style: normal;
+	font-weight: 700;
+	src: url("../fonts/inter-bold.otf") format("opentype");
 }
