--- a/apps/frontend/src/libs/components/header/header.module.css
+++ b/apps/frontend/src/libs/components/header/header.module.css
@@ -1,39 +1,39 @@
 .header {
+	box-sizing: border-box;
 	display: flex;
-	justify-content: flex-end;
 	align-items: center;
+	justify-content: flex-end;
+	width: 100%;
 	height: 72px;
 	padding: 0 32px;
 	background-color: var(--color-bg-alt);
-	width: 100%;
-	box-sizing: border-box;
 	border-bottom: 1px solid var(--color-bg-main);
 }
 
 .userInfo {
 	display: flex;
-	align-items: center;
-	gap: 8px;
 	flex-shrink: 0;
+	gap: 8px;
+	align-items: center;
 }
 
 .avatar {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	width: 32px;
 	height: 32px;
-	border-radius: 50%;
-	background-color: var(--color-brand-accent);
-	color: var(--color-text-disabled);
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	font-size: var(--font-size-tiny);
 	font-weight: var(--font-weight-bold);
+	color: var(--color-text-disabled);
+	background-color: var(--color-brand-accent);
+	border-radius: 50%;
 }
 
 .name {
 	font-family: var(--font-family);
 	font-size: var(--font-size-tiny);
 	font-weight: var(--font-weight-regular);
+	line-height: var(--font-line-height-tiny);
 	color: var(--color-text-main);
-	line-height: 20px;
 }
