--- a/apps/frontend/src/pages/auth/styles.module.css
+++ b/apps/frontend/src/pages/auth/styles.module.css
@@ -1,4 +1,24 @@
 .container {
 	display: flex;
+	width: 100vw;
+	height: 100vh;
+	overflow: hidden;
+	font-family: Inter, Helvetica, sans-serif;
+}
+
+.left-panel {
+	display: flex;
+	flex: 0 0 50%;
 	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	background-color: var(--bg-base);
+}
+
+.right-panel {
+	flex: 0 0 50%;
+	background-image: url("../../assets/images/background.jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
 }
