--- a/apps/frontend/src/pages/auth/styles.module.css
+++ b/apps/frontend/src/pages/auth/styles.module.css
@@ -7,6 +7,7 @@
 }
 
 .left-panel {
+	position: relative;
 	display: flex;
 	flex: 0 0 50%;
 	flex-direction: column;
@@ -21,4 +22,18 @@
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
+}
+
+.left-panel__logo {
+	position: absolute;
+	top: 32px;
+	left: 48px;
+	display: flex;
+	flex-direction: row;
+	gap: 8px;
+	align-items: center;
+	height: 24px;
+	font-size: var(--font-size-small);
+	font-weight: var(--font-weight-semibold);
+	line-height: var(--font-line-height-small);
 }
