--- a/apps/frontend/src/assets/css/fonts.css
+++ b/apps/frontend/src/assets/css/fonts.css
@@ -11,3 +11,10 @@
 	font-weight: 700;
 	src: url("../fonts/inter-bold.otf") format("opentype");
 }
+
+@font-face {
+	font-family: Inter;
+	font-style: normal;
+	font-weight: 600;
+	src: url("../fonts/inter-semi-bold.otf") format("opentype");
+}
