--- a/apps/frontend/src/assets/css/variables.css
+++ b/apps/frontend/src/assets/css/variables.css
@@ -1,43 +1,2 @@
-:root {
-	--font-family: inter;
-
-	/* Font sizes */
-	--font-size-display: 56px;
-	--font-size-h1: 40px;
-	--font-size-h2: 32px;
-	--font-size-h3: 24px;
-	--font-size-h4: 20px;
-	--font-size-small: 16px;
-	--font-size-tiny: 14px;
-
-	/* Font line height */
-	--font-line-height-display: 64px;
-	--font-line-height-h1: 48px;
-	--font-line-height-h2: 40px;
-	--font-line-height-h3: 32px;
-	--font-line-height-small: 24px;
-	--font-line-height-tiny: 20px;
-
-	/* Font weights */
-	--font-weight-bold: 700;
-	--font-weight-semibold: 600;
-	--font-weight-regular: 400;
-
-	/* Background */
-	--color-bg-main: #eaeae8;
-	--color-bg-alt: #f8f8fa;
-
-	/* Typography */
-	--color-text-main: #29221c;
-	--color-text-secondary: #6c5948;
-	--color-text-tertiary: #8a8683;
-	--color-text-disabled: #ecebeb;
-
-	/* Brand */
-	--color-brand-primary: #773800;
-	--color-brand-accent: #34a853;
-
-	/* Support */
-	--color-support-error: #ee4e2f;
-	--color-support-border: #bbb8b5;
-}
+@import url("./variables/color.variables.css");
+@import url("./variables/font.variables.css");
