--- a/apps/frontend/src/libs/components/header/styles.module.css
+++ b/apps/frontend/src/libs/components/header/styles.module.css
@@ -2,7 +2,7 @@
 	box-sizing: border-box;
 	display: flex;
 	align-items: center;
-	justify-content: flex-end;
+	justify-content: space-between;
 	width: 100%;
 	height: 72px;
 	padding: 0 32px;
@@ -36,4 +36,37 @@
 	font-weight: var(--font-weight-regular);
 	line-height: var(--font-line-height-tiny);
 	color: var(--color-text-main);
+}
+
+.logo {
+	display: flex;
+	gap: 8px;
+	align-items: center;
+}
+
+.logoIcon {
+	width: 24px;
+	height: 24px;
+}
+
+.logoText {
+	font-family: Inter, sans-serif;
+	font-size: 16px;
+	font-style: normal;
+	font-weight: 600;
+	line-height: 24px;
+	color: var(--color-text-main);
+	letter-spacing: 0;
+}
+
+.avatarImage {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	border-radius: 50%;
+}
+
+.buttons {
+	display: flex;
+	gap: 8px;
 }
