--- a/apps/frontend/src/libs/components/header/styles.module.css
+++ b/apps/frontend/src/libs/components/header/styles.module.css
@@ -51,9 +51,9 @@
 
 .logoText {
 	font-family: Inter, sans-serif;
-	font-size: 16px;
+	font-size: var(--font-size-small);
 	font-style: normal;
-	font-weight: 600;
+	font-weight: var(--font-weight-semibold);
 	line-height: 24px;
 	color: var(--color-text-main);
 	letter-spacing: 0;
