--- a/apps/frontend/src/libs/components/sidebar/styles.module.css
+++ b/apps/frontend/src/libs/components/sidebar/styles.module.css
@@ -26,7 +26,7 @@
 }
 
 .sidebar-logo-text {
-	font-size: 16px;
+	font-size: 1rem;
 	font-weight: 600;
 	line-height: 24px;
 	color: #00291d;
@@ -59,7 +59,7 @@
 }
 
 .sidebar-navigation-text {
-	font-size: 16px;
+	font-size: 1rem;
 	font-weight: 400;
 	line-height: 24px;
 }
