--- a/apps/frontend/src/assets/css/scaffolding.css
+++ b/apps/frontend/src/assets/css/scaffolding.css
@@ -5,12 +5,12 @@
 body {
 	display: flex;
 	flex-direction: column;
-	min-width: 320px;
+	min-width: var(--container-min-width);
 	min-height: 100vh;
 	margin: 0;
-	font-family: Arial, sans-serif;
-	font-size: 14px;
-	line-height: 1.5;
+	font-family: var(--font-family);
+	font-size: var(--font-size);
+	line-height: var(--line-height);
 }
 
 #root {
