--- a/apps/frontend/src/assets/css/scaffolding.css
+++ b/apps/frontend/src/assets/css/scaffolding.css
@@ -5,12 +5,12 @@
 body {
 	display: flex;
 	flex-direction: column;
-	min-width: var(--container-min-width);
+	min-width: 320px;
 	min-height: 100vh;
 	margin: 0;
 	font-family: var(--font-family);
-	font-size: var(--font-size);
-	line-height: var(--line-height);
+	font-size: var(--font-size-small);
+	line-height: 1.5;
 }
 
 #root {
