--- a/apps/frontend/src/assets/css/scaffolding.css
+++ b/apps/frontend/src/assets/css/scaffolding.css
@@ -8,8 +8,8 @@ body {
 	min-width: 320px;
 	min-height: 100vh;
 	margin: 0;
-	font-family: Arial, sans-serif;
-	font-size: 14px;
+	font-family: var(--font-family);
+	font-size: var(--font-size-small);
 	line-height: 1.5;
 }
 
