feat(frontend): update styling files with the updated css variables ss-15

--- a/apps/frontend/src/pages/auth/libs/components/sign-up-form/styles.module.css
+++ b/apps/frontend/src/pages/auth/libs/components/sign-up-form/styles.module.css
@@ -7,7 +7,6 @@
 	margin: 0 0 48px;
 	font-size: var(--font-size-h1);
 	font-weight: var(--font-weight-semibold);
-	line-height: var(--font-line-height-h1);
 }
 
 .form {
@@ -23,14 +22,12 @@
 	gap: 4px;
 	font-size: var(--font-size-small);
 	font-weight: var(--font-weight-regular);
-	line-height: var(--font-line-height-small);
-	color: var(--text-strong);
+	color: var(--color-text-strong);
 }
 
 .login-link__text {
 	margin: 0;
 	font-size: var(--font-size-tiny);
 	font-weight: var(--font-weight-regular);
-	line-height: var(--font-line-height-tiny);
-	color: var(--text-weak);
+	color: var(--color-text-weak);
 }
