--- a/apps/frontend/src/assets/css/fonts.css
+++ b/apps/frontend/src/assets/css/fonts.css
@@ -2,7 +2,8 @@
 	font-family: Inter;
 	font-style: normal;
 	font-weight: 400;
-	src: url("/assets/fonts/inter/inter-regular.woff") format("woff");
+	src: url("../../../public/assets/fonts/inter/inter-regular.woff")
+		format("woff");
 	font-display: swap;
 }
 
@@ -10,6 +11,7 @@
 	font-family: Inter;
 	font-style: normal;
 	font-weight: 600;
-	src: url("/assets/fonts/inter/inter-semibold.woff") format("woff");
+	src: url("../../../public/assets/fonts/inter/inter-semibold.woff")
+		format("woff");
 	font-display: swap;
 }
