--- a/apps/frontend/src/pages/auth/styles.module.css
+++ b/apps/frontend/src/pages/auth/styles.module.css
@@ -3,7 +3,7 @@
 	width: 100vw;
 	height: 100vh;
 	overflow: hidden;
-	font-family: Inter, Helvetica, sans-serif;
+	font-family: var(--font-family);
 }
 
 .left-panel {
@@ -13,7 +13,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	background-color: var(--bg-base);
+	background-color: var(--color-base);
 }
 
 .right-panel {
@@ -35,5 +35,4 @@
 	height: 24px;
 	font-size: var(--font-size-small);
 	font-weight: var(--font-weight-semibold);
-	line-height: var(--font-line-height-small);
 }
