--- a/apps/frontend/src/libs/components/header/styles.module.css
+++ b/apps/frontend/src/libs/components/header/styles.module.css
@@ -6,8 +6,7 @@
 	width: 100%;
 	height: 72px;
 	padding: 0 32px;
-	background-color: var(--color-bg-alt);
-	border-bottom: 1px solid var(--color-bg-main);
+	border-bottom: 1px solid var(--color-stroke-weak);
 }
 
 .userInfo {
@@ -17,25 +16,11 @@
 	align-items: center;
 }
 
-.avatar {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 32px;
-	height: 32px;
-	font-size: var(--font-size-tiny);
-	font-weight: var(--font-weight-bold);
-	color: var(--color-text-disabled);
-	background-color: var(--color-brand-accent);
-	border-radius: 50%;
-}
-
 .name {
 	font-family: var(--font-family);
 	font-size: var(--font-size-tiny);
 	font-weight: var(--font-weight-regular);
-	line-height: var(--font-line-height-tiny);
-	color: var(--color-text-main);
+	color: var(--color-text-strong);
 }
 
 .logo {
@@ -45,25 +30,8 @@
 }
 
 .logoIcon {
-	width: 24px;
+	width: 136px;
 	height: 24px;
-}
-
-.logoText {
-	font-family: Inter, sans-serif;
-	font-size: var(--font-size-small);
-	font-style: normal;
-	font-weight: var(--font-weight-semibold);
-	line-height: 24px;
-	color: var(--color-text-main);
-	letter-spacing: 0;
-}
-
-.avatarImage {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	border-radius: 50%;
 }
 
 .buttons {
