--- a/apps/frontend/src/libs/components/button/styles.module.css
+++ b/apps/frontend/src/libs/components/button/styles.module.css
@@ -3,7 +3,7 @@
 	width: 100%;
 	padding: 12px 16px;
 	font-family: Inter, sans-serif;
-	font-size: var(--font-size-smal);
+	font-size: var(--font-size-small);
 	color: var(--color-text-inverse-strong);
 	text-align: center;
 	background-color: var(--color-fill-brand-strong);
