--- a/apps/frontend/src/libs/components/header/styles.module.css
+++ b/apps/frontend/src/libs/components/header/styles.module.css
@@ -5,7 +5,7 @@
 	justify-content: space-between;
 	width: 100%;
 	height: 72px;
-	padding: 0 32px;
+	padding: 12px 32px 12px 48px;
 	border-bottom: 1px solid var(--color-stroke-weak);
 }
 
@@ -36,5 +36,5 @@
 
 .buttons {
 	display: flex;
-	gap: 8px;
+	gap: 10px;
 }
