--- a/apps/frontend/src/libs/components/header/styles.module.css
+++ b/apps/frontend/src/libs/components/header/styles.module.css
@@ -4,23 +4,15 @@
 	align-items: center;
 	justify-content: space-between;
 	width: 100%;
-	height: 72px;
 	padding: 12px 32px 12px 48px;
 	border-bottom: 1px solid var(--color-stroke-weak);
 }
 
 .userInfo {
 	display: flex;
-	flex-shrink: 0;
-	gap: 8px;
+	gap: 10px;
 	align-items: center;
-}
-
-.name {
-	font-family: var(--font-family);
-	font-size: var(--font-size-tiny);
-	font-weight: var(--font-weight-regular);
-	color: var(--color-text-strong);
+	padding: 8px 16px;
 }
 
 .logo {
@@ -29,12 +21,8 @@
 	align-items: center;
 }
 
-.logoIcon {
-	width: 136px;
-	height: 24px;
-}
-
 .buttons {
 	display: flex;
 	gap: 10px;
+	padding: 8px 16px;
 }
