--- a/apps/frontend/src/libs/components/input/styles.module.css
+++ b/apps/frontend/src/libs/components/input/styles.module.css
@@ -6,9 +6,39 @@
 	color: var(--color-text-primary);
 }
 
+.input {
+	height: 48px;
+	padding: 12px 16px;
+	border: 1px solid var(--color-stroke-strong);
+	border-radius: 12px;
+}
+
+.input:hover {
+	background-color: var(--color-fill-hover);
+}
+
+.input:focus {
+	outline: none;
+	border: 2px solid var(--color-stroke-focus);
+}
+
+.input-error {
+	border: 2px solid var(--color-text-error);
+}
+
 .error {
-	font-size: 14px;
-	font-weight: 500;
-	line-height: 1.3;
-	color: var(--color-danger);
+	display: flex;
+	align-items: center;
+	font-family: var(--font-family);
+	font-size: var(--font-size-tiny);
+	font-weight: var(--font-weight-semibold);
+	color: var(--color-text-error);
+}
+
+.error::before {
+	display: inline-block;
+	width: 18px;
+	height: 18px;
+	margin-right: 7px;
+	content: url("../../../assets/images/error.svg");
 }
