--- a/apps/frontend/src/libs/components/button/styles.module.css
+++ b/apps/frontend/src/libs/components/button/styles.module.css
@@ -6,6 +6,7 @@
 	font-size: var(--font-size-small);
 	color: var(--color-text-inverse-strong);
 	text-align: center;
+	text-decoration: none;
 	background-color: var(--color-fill-brand-strong);
 	border: none;
 	border-radius: 8px;
