--- a/apps/frontend/src/pages/auth/libs/components/sign-in-form/styles.module.css
+++ b/apps/frontend/src/pages/auth/libs/components/sign-in-form/styles.module.css
@@ -7,7 +7,7 @@
 	margin: 0 0 48px;
 	font-size: var(--font-size-h1);
 	font-weight: var(--font-weight-semibold);
-	line-height: 48px;
+	line-height: 1.2;
 }
 
 .form {
@@ -31,6 +31,6 @@
 	margin: 0;
 	font-size: var(--font-size-tiny);
 	font-weight: var(--font-weight-regular);
-	line-height: 20px;
+	line-height: 1.4;
 	color: var(--color-text-weak);
 }
