--- a/apps/frontend/src/libs/components/input/styles.module.css
+++ b/apps/frontend/src/libs/components/input/styles.module.css
@@ -3,39 +3,29 @@
 	flex-direction: column;
 	gap: 4px;
 	width: 100%;
-	max-width: 364px;
-	font-family: var(--font-family);
 }
 
 .error {
 	display: inline-flex;
-	gap: 7px;
+	gap: 8px;
 	align-items: center;
 	font-size: var(--font-size-tiny);
 	font-weight: var(--font-weight-semibold);
-	line-height: 20px;
+	line-height: 1.4;
 	color: var(--color-text-error);
 }
 
 .label-caption {
 	font-size: var(--font-size-small);
 	font-weight: var(--font-weight-regular);
-	line-height: 24px;
+	line-height: 1.5;
 	color: var(--color-text-strong);
 }
 
-.label-caption::first-letter,
-.error::first-letter {
-	text-transform: capitalize;
-}
-
-.error-icon {
-	width: 18px;
-}
-
 .input {
-	height: 48px;
 	padding: 12px 16px;
+	font-size: var(--font-size-small);
+	line-height: 1.5;
 	border-radius: 8px;
 	transition: background-color 0.2s ease-in-out;
 }
