--- a/apps/frontend/src/libs/components/button/styles.module.css
+++ b/apps/frontend/src/libs/components/button/styles.module.css
@@ -1,11 +1,11 @@
 .button {
 	position: relative;
-	width: 100%;
 	padding: 12px 16px;
 	font-family: Inter, sans-serif;
 	font-size: var(--font-size-small);
 	color: var(--color-text-inverse-strong);
 	text-align: center;
+	text-decoration: none;
 	background-color: var(--color-fill-brand-strong);
 	border: none;
 	border-radius: 8px;
