--- a/apps/frontend/src/libs/components/avatar/styles.module.css
+++ b/apps/frontend/src/libs/components/avatar/styles.module.css
@@ -2,13 +2,13 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 32px;
-	height: 32px;
+	width: var(--avatar-size);
+	height: var(--avatar-size);
 	overflow: hidden;
 	border-radius: 50%;
 }
 
-.avatarImage {
+.avatar-image {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
