--- a/apps/frontend/src/libs/components/header/styles.module.css
+++ b/apps/frontend/src/libs/components/header/styles.module.css
@@ -4,13 +4,13 @@
 	align-items: center;
 	justify-content: space-between;
 	width: 100%;
-	padding: 12px 32px 12px 48px;
+	padding: 12px 32px;
 	border-bottom: 1px solid var(--color-stroke-weak);
 }
 
-.userInfo {
+.user-info {
 	display: flex;
-	gap: 10px;
+	gap: 8px;
 	align-items: center;
 	padding: 8px 16px;
 }
@@ -23,6 +23,5 @@
 
 .buttons {
 	display: flex;
-	gap: 10px;
-	padding: 8px 16px;
+	gap: 8px;
 }
