--- a/apps/frontend/src/libs/components/button/styles.module.css
+++ b/apps/frontend/src/libs/components/button/styles.module.css
@@ -1,5 +1,6 @@
 .button {
 	position: relative;
+	width: 100%;
 	padding: 12px 16px;
 	font-family: Inter, sans-serif;
 	font-size: var(--font-size-small);
