--- a/apps/frontend/src/pages/auth/libs/components/sign-in-form/styles.module.css
+++ b/apps/frontend/src/pages/auth/libs/components/sign-in-form/styles.module.css
@@ -23,7 +23,7 @@
 	gap: 4px;
 	font-size: var(--font-size-small);
 	font-weight: var(--font-weight-regular);
-	line-height: 150%;
+	line-height: 1.5;
 	color: var(--color-text-strong);
 }
 
