--- a/apps/frontend/src/pages/auth/styles.module.css
+++ b/apps/frontend/src/pages/auth/styles.module.css
@@ -1,9 +1,6 @@
 .container {
 	display: flex;
-	width: 100vw;
-	height: 100vh;
-	overflow: hidden;
-	font-family: Inter, Helvetica, sans-serif;
+	min-height: 100vh;
 }
 
 .left-panel {
