--- a/apps/frontend/src/libs/components/sidebar/styles.module.css
+++ b/apps/frontend/src/libs/components/sidebar/styles.module.css
@@ -8,8 +8,8 @@
 	gap: 56px;
 	width: 360px;
 	height: 100%;
-	background-color: #ffffff;
-	border-right: 1px solid rgb(0 102 71 / 4%);
+	background-color: var(--color-background-base);
+	border-right: 1px solid var(--color-brand-50);
 }
 
 .sidebar-logo-link {
