--- a/apps/frontend/src/libs/components/input/styles.module.css
+++ b/apps/frontend/src/libs/components/input/styles.module.css
@@ -1,14 +1,65 @@
 .label {
 	display: flex;
 	flex-direction: column;
-	gap: 8px;
+	gap: 4px;
 	width: 100%;
-	color: var(--color-text-primary);
 }
 
 .error {
-	font-size: 14px;
-	font-weight: 500;
-	line-height: 1.3;
-	color: var(--color-danger);
+	display: inline-flex;
+	gap: 8px;
+	align-items: center;
+	font-size: var(--font-size-tiny);
+	font-weight: var(--font-weight-semibold);
+	line-height: 1.4;
+	color: var(--color-text-error);
+}
+
+.label-caption {
+	font-size: var(--font-size-small);
+	font-weight: var(--font-weight-regular);
+	line-height: 1.5;
+	color: var(--color-text-strong);
+}
+
+.input {
+	padding: 12px 16px;
+	font-size: var(--font-size-small);
+	line-height: 1.5;
+	border-radius: 8px;
+	transition: background-color 0.2s ease-in-out;
+}
+
+.input.input-error {
+	outline: none;
+	border: 2px solid var(--color-stroke-error-strong);
+}
+
+.input-error,
+.input-error:hover,
+.input-error:focus {
+	background-color: var(--color-fill-error-weak);
+}
+
+.input,
+.input:focus {
+	border: 1px solid var(--color-stroke-strong);
+}
+
+.input:hover {
+	background-color: var(--color-fill-hover);
+}
+
+.input:focus {
+	outline: 2px solid var(--color-stroke-focus);
+	outline-offset: 2px;
+	background-color: initial;
+}
+
+.input:focus::placeholder {
+	color: transparent;
+}
+
+.input:focus + .error {
+	display: none;
 }
