--- a/apps/frontend/src/libs/components/app/styles.module.css
+++ b/apps/frontend/src/libs/components/app/styles.module.css
@@ -2,7 +2,8 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	width: 1200px;
+	width: 100%;
+	max-width: 1200px;
 	margin: 50px auto;
 }
 
