feat(frontend): style log in link ss-15

--- a/apps/frontend/src/libs/components/link/styles.module.css
+++ b/apps/frontend/src/libs/components/link/styles.module.css
@@ -1,8 +1,8 @@
 .link {
-	color: blue;
+	color: var(--color-text-brand);
 	transition: all 0.3s ease;
 }
 
 .link:hover {
-	color: red;
+	color: var(--color-text-strong);
 }
