--- a/apps/frontend/src/libs/components/button/styles.module.css
+++ b/apps/frontend/src/libs/components/button/styles.module.css
@@ -1,6 +1,7 @@
 .button {
 	position: relative;
 	width: 100%;
+	min-width: fit-content;
 	padding: 12px 16px;
 	font-family: Inter, sans-serif;
 	font-size: var(--font-size-small);
