feat(frontend): create icon component ss-22

--- a/apps/frontend/src/libs/components/nav-item/styles.module.css
+++ b/apps/frontend/src/libs/components/nav-item/styles.module.css
@@ -23,8 +23,7 @@
 }
 
 .sidebar-navigation-icon {
-	width: 24px;
-	height: 24px;
+	color: var(--color-stroke-strong);
 }
 
 .sidebar-navigation-text {
