--- a/apps/frontend/src/libs/components/sidebar/libs/components/sidebar-item/styles.module.css
+++ b/apps/frontend/src/libs/components/sidebar/libs/components/sidebar-item/styles.module.css
@@ -1,8 +1,8 @@
-.sidebar-navigation-link {
+.link {
 	display: flex;
 	gap: 12px;
 	align-items: center;
-	padding: 12px 20px;
+	padding: 12px 24px;
 	color: var(--color-text-strong);
 	text-decoration: none;
 	border-left: 4px solid transparent;
@@ -12,21 +12,21 @@
 		color 0.4s ease;
 }
 
-.sidebar-navigation-link:hover {
+.link:hover {
 	cursor: pointer;
 	background-color: var(--color-fill-weaker);
 }
 
-.sidebar-navigation-link-active {
+.active {
 	background-color: var(--color-brand-50);
 	border-left: 4px solid var(--color-stroke-selected);
 }
 
-.sidebar-navigation-icon {
+.icon {
 	color: var(--color-stroke-strong);
 }
 
-.sidebar-navigation-text {
+.label {
 	font-size: var(--font-size-small);
 	font-weight: var(--font-weight-regular);
 	line-height: 1.5;
