--- a/apps/frontend/src/libs/components/sidebar/styles.module.css
+++ b/apps/frontend/src/libs/components/sidebar/styles.module.css
@@ -1,22 +1,19 @@
 .sidebar {
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 1;
 	display: flex;
 	flex-direction: column;
 	gap: 56px;
-	width: 360px;
+	max-width: 320px;
 	height: 100%;
 	background-color: var(--color-background-base);
 	border-right: 1px solid var(--color-brand-50);
 }
 
-.sidebar-logo-link {
+.logo-link {
 	padding: 24px;
 }
 
-.sidebar-navigation-list {
+.navigation-list {
 	padding: 0;
 	margin: 0;
+	list-style-type: none;
 }
