--- a/apps/frontend/src/assets/css/scaffolding.css
+++ b/apps/frontend/src/assets/css/scaffolding.css
@@ -11,6 +11,7 @@ body {
 	font-family: var(--font-family);
 	font-size: var(--font-size-small);
 	line-height: 1.5;
+	color: var(--color-text-strong);
 }
 
 #root {
