--- a/apps/frontend/src/libs/components/app/styles.module.css
+++ b/apps/frontend/src/libs/components/app/styles.module.css
@@ -1,5 +1,11 @@
 .container {
 	display: flex;
+	flex-grow: 1;
 	flex-direction: column;
 	justify-content: center;
+}
+
+.outlet-container {
+	display: flex;
+	flex-grow: 1;
 }
