--- a/apps/frontend/src/libs/components/landing/libs/components/hero-section/styles.module.css
+++ b/apps/frontend/src/libs/components/landing/libs/components/hero-section/styles.module.css
@@ -22,9 +22,14 @@
 	text-align: center;
 }
 
-.hero-section-cover {
+.hero-section-cover img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
 	object-position: center;
+}
+
+.hero-section-cover {
+	padding: 0;
+	margin: 0;
 }
