fix(frontend/shared): remove unused class name and resolve mistype ss-15

--- a/apps/frontend/src/pages/auth/libs/components/sign-up-form/styles.module.css
+++ b/apps/frontend/src/pages/auth/libs/components/sign-up-form/styles.module.css
@@ -3,7 +3,7 @@
 	max-width: 364px;
 }
 
-.form__title {
+.form-title {
 	margin: 0 0 48px;
 	font-size: var(--font-size-h1);
 	font-weight: var(--font-weight-semibold);
