--- a/apps/frontend/src/libs/components/sidebar/libs/components/sidebar-item/styles.module.css
+++ b/apps/frontend/src/libs/components/sidebar/libs/components/sidebar-item/styles.module.css
@@ -1,4 +1,4 @@
-.link {
+.item a {
 	display: flex;
 	gap: 12px;
 	align-items: center;
@@ -12,12 +12,13 @@
 		color 0.4s ease;
 }
 
-.link:hover {
+.item a:hover {
+	color: var(--color-text-strong);
 	cursor: pointer;
 	background-color: var(--color-fill-weaker);
 }
 
-.active {
+.item :global(a.active) {
 	background-color: var(--color-brand-50);
 	border-left: 4px solid var(--color-stroke-selected);
 }
