--- a/apps/frontend/src/libs/components/sidebar/styles.module.css
+++ b/apps/frontend/src/libs/components/sidebar/styles.module.css
@@ -8,8 +8,8 @@
 	border-right: 1px solid var(--color-brand-50);
 }
 
-.logo-link {
-	padding: 24px;
+.logo {
+	margin: 24px;
 }
 
 .navigation-list {
