--- a/apps/frontend/src/pages/libs/components/hero-section/styles.module.css
+++ b/apps/frontend/src/pages/libs/components/hero-section/styles.module.css
@@ -1,4 +1,4 @@
-.hero-section {
+.section {
 	display: flex;
 	flex-direction: column;
 	gap: 100px;
@@ -6,7 +6,7 @@
 	margin-top: 100px;
 }
 
-.hero-section-title {
+.section-title {
 	margin-bottom: 0;
 	font-size: var(--font-size-display);
 	font-weight: var(--font-weight-bold);
@@ -14,7 +14,7 @@
 	text-align: center;
 }
 
-.hero-section-description {
+.section-description {
 	margin: 0;
 	font-size: var(--font-size-h4);
 	font-weight: var(--font-weight-regular);
@@ -22,14 +22,14 @@
 	text-align: center;
 }
 
-.hero-section-cover img {
+.section-cover-image {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
 	object-position: center;
 }
 
-.hero-section-cover {
+.section-cover {
 	padding: 0;
 	margin: 0;
 }
