--- a/apps/frontend/src/pages/auth/styles.module.css
+++ b/apps/frontend/src/pages/auth/styles.module.css
@@ -15,13 +15,13 @@
 
 .right-panel {
 	flex: 0 0 50%;
-	background-image: url("../../assets/images/background.jpg");
+	background-image: url("../../assets/images/auth-page-background.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
 }
 
-.left-panel-logo {
+.logo {
 	position: absolute;
 	top: 32px;
 	left: 48px;
