feat(frontend/shared): add sign up flow to the frontend ss-15 (#47)
* feat(frontend): update user sign up request dto with first name and last name ss-15

* feat(frontend): add repeat password, first and last name fields to sign-up form ss-15

* feat(frontend): add log in link to sign-up form ss-15

* feat(frontend): add sign-up action flow ss-15

* feat(frontend): add redirection to the app / after form submission ss-15

* feat(frontend): update user sign up request with last name being required ss-15

* feat(frontend): remove unwanted parts of the pages ss-15

* feat(frontend): introduce two-column layout for auth component ss-15

* feat(frontend): add styling variables as colors and fonts ss-15

* feat(frontend): style right panel of the auth component ss-15

* feat(frontend): style logo of the auth component ss-15

* feat(frontend): style left panel of the auth component ss-15

* chore(frontend): resolve linting and formatting issues ss-15

* fix(backend): resolve built errors for dto and copy command ss-15

* feat(frontend): rename Inter.ttf to inter.ttf ss-15

* feat(frontend): update styling files with the updated css variables ss-15

* feat(frontend): style inputs for sign up forms with errors ss-15

* feat(frontend): style link to the login page for sign up ss-15

* feat(frontend/shared): define another type for user sign up form with repeat password ss-15

* feat(frontend): add placeholder for inputs ss-15

* feat(frontend): style log in link ss-15

* chore(root): add package-lock.json ss-15

* chore(root): regenerate package-lock to fix rollup native dependency ss-15

* fix(frontend/shared): update styling of sign up form, remove placeholder ss-15

* feat(frontend): add confirm password validation schema ss-15

* fix(frontend): fix path to user sign up request dto ss-15

* feat(backend): fix route registration test by comparing only methods and path fields ss-15

* fix(frontend/shared): remove unused class name and resolve mistype ss-15

* feat(frontend/s

--- a/apps/frontend/src/libs/components/app/styles.module.css
+++ b/apps/frontend/src/libs/components/app/styles.module.css
@@ -1,7 +1,11 @@
 .container {
 	display: flex;
+	flex-grow: 1;
 	flex-direction: column;
 	justify-content: center;
-	width: 350px;
-	margin: 50px auto;
+}
+
+.outlet-container {
+	display: flex;
+	flex-grow: 1;
 }
