--- a/apps/frontend/src/pages/auth/styles.module.css
+++ b/apps/frontend/src/pages/auth/styles.module.css
@@ -1,4 +1,30 @@
 .container {
 	display: flex;
+	flex-grow: 1;
+	overflow: hidden;
+	font-family: var(--font-family);
+}
+
+.left-panel {
+	position: relative;
+	display: flex;
+	flex: 0 0 50%;
 	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	background-color: var(--color-base);
+}
+
+.right-panel {
+	flex: 0 0 50%;
+	background-image: url("../../assets/images/auth-page-background.jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+}
+
+.logo {
+	position: absolute;
+	top: 32px;
+	left: 48px;
 }
