--- a/apps/frontend/src/pages/auth/styles.module.css
+++ b/apps/frontend/src/pages/auth/styles.module.css
@@ -1,6 +1,8 @@
 .container {
 	display: flex;
-	min-height: 100vh;
+	flex-grow: 1;
+	overflow: hidden;
+	font-family: var(--font-family);
 }
 
 .left-panel {
@@ -10,7 +12,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	background-color: var(--bg-base);
+	background-color: var(--color-base);
 }
 
 .right-panel {
