--- a/apps/frontend/src/libs/components/carousel/style.module.css
+++ b/apps/frontend/src/libs/components/carousel/style.module.css
@@ -57,6 +57,16 @@
 	animation: slingshot-return-right 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
+@media (width <= 768px) {
+	.carousel {
+		aspect-ratio: 3 / 1;
+	}
+
+	.carousel-item {
+		flex: 0 0 33.33%;
+	}
+}
+
 @keyframes spring-bounce-left {
 	0% {
 		transform: translateX(0);
