--- a/apps/frontend/src/libs/components/button/styles.module.css
+++ b/apps/frontend/src/libs/components/button/styles.module.css
@@ -5,6 +5,7 @@
 	padding: 12px 16px;
 	font-family: Inter, sans-serif;
 	font-size: var(--font-size-small);
+	line-height: 1.5;
 	color: var(--color-text-inverse-strong);
 	text-align: center;
 	text-decoration: none;
