feat(frontend): add mobile responsiveness for sign up ss-114

--- a/apps/frontend/src/libs/components/input/styles.module.css
+++ b/apps/frontend/src/libs/components/input/styles.module.css
@@ -63,3 +63,13 @@
 .input:focus + .error {
 	display: none;
 }
+
+@media (width <= 576px) {
+	.label-caption {
+		font-size: var(--font-size-tiny);
+	}
+
+	.input {
+		padding: 8px 10px;
+	}
+}
