--- a/apps/frontend/src/pages/auth/styles.module.css
+++ b/apps/frontend/src/pages/auth/styles.module.css
@@ -6,12 +6,10 @@
 }
 
 .left-panel {
-	position: relative;
 	display: flex;
 	flex: 0 0 50%;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
 	background-color: var(--color-base);
 }
 
@@ -24,7 +22,44 @@
 }
 
 .logo {
-	position: absolute;
-	top: 32px;
-	left: 48px;
+	display: flex;
+	align-self: start;
+	padding: 32px 48px;
+}
+
+@media (width <= 991px) {
+	.container {
+		align-items: center;
+		justify-content: center;
+		background:
+			linear-gradient(var(--color-text-weak), var(--color-text-weak)),
+			url("../../assets/images/auth-page-background-responsive.jpg");
+	}
+
+	.left-panel {
+		min-width: 440px;
+		padding: 48px;
+		margin: 60px 0;
+		border-radius: 30px;
+	}
+
+	.right-panel {
+		display: none;
+	}
+
+	.logo {
+		padding: 0 0 28px;
+	}
+}
+
+@media (width <= 576px) {
+	.left-panel {
+		min-width: 300px;
+		padding: 24px;
+		margin: 0;
+	}
+
+	.logo {
+		padding-bottom: 18px;
+	}
 }
