--- a/apps/frontend/src/pages/landing/libs/components/hero-section/styles.module.css
+++ b/apps/frontend/src/pages/landing/libs/components/hero-section/styles.module.css
@@ -1,9 +1,10 @@
 .section {
+	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
 	gap: 100px;
 	width: 100%;
-	margin-top: 100px;
+	padding-top: 100px;
 }
 
 .section-title {
@@ -30,6 +31,13 @@
 }
 
 .section-cover {
-	padding: 0;
-	margin: 0;
+	display: block;
+	width: 100%;
+	max-height: 100vh;
+	aspect-ratio: 1632 / 918;
+	overflow-y: hidden;
+	background-image: url("/assets/images/landing-cover.jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
 }
