--- a/apps/frontend/src/pages/auth/styles.module.css
+++ b/apps/frontend/src/pages/auth/styles.module.css
@@ -31,9 +31,10 @@
 	.container {
 		align-items: center;
 		justify-content: center;
-		background:
-			linear-gradient(var(--color-text-weak), var(--color-text-weak)),
-			url("../../assets/images/auth-page-background-responsive.jpg");
+		background-image: url("../../assets/images/auth-page-background-responsive.jpg");
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: cover;
 	}
 
 	.left-panel {
@@ -54,7 +55,7 @@
 
 @media (width <= 768px) {
 	.left-panel {
-		min-width: 300px;
+		min-width: 310px;
 		padding: 26px;
 		margin: clamp(40px, 10vh, 60px) 0;
 	}
