--- a/apps/frontend/src/pages/auth/styles.module.css
+++ b/apps/frontend/src/pages/auth/styles.module.css
@@ -37,9 +37,9 @@
 	}
 
 	.left-panel {
-		min-width: 460px;
+		flex-grow: 1;
 		padding: 48px;
-		margin: clamp(60px, 10vh, 100px) 0;
+		margin: clamp(60px, 10vh, 100px) 40px;
 		border-radius: 30px;
 	}
 
@@ -54,9 +54,8 @@
 
 @media (width <= 768px) {
 	.left-panel {
-		min-width: 310px;
 		padding: 26px;
-		margin: clamp(40px, 10vh, 60px) 0;
+		margin: clamp(40px, 10vh, 60px) 20px;
 	}
 
 	.logo {
