feat(frontend): basic profile page layout ss-185

--- a/apps/frontend/src/pages/profile/libs/components/user-details/libs/components/profile-form/styles.module.css
+++ b/apps/frontend/src/pages/profile/libs/components/user-details/libs/components/profile-form/styles.module.css
@@ -1,6 +1,10 @@
 .form {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
-	height: 100%;
+	gap: 1.8rem;
+	margin-bottom: 1.8rem;
+}
+
+.form > button {
+	width: 50%;
 }
