--- a/apps/frontend/src/libs/components/tab-container/styles.module.css
+++ b/apps/frontend/src/libs/components/tab-container/styles.module.css
@@ -8,7 +8,8 @@
 	align-items: center;
 }
 
-.content {
-	width: 100%;
-	height: 100%;
+.tab {
+	cursor: pointer;
+	background: none;
+	border: none;
 }
