--- a/apps/frontend/src/pages/profile/styles.module.css
+++ b/apps/frontend/src/pages/profile/styles.module.css
@@ -1,13 +1,45 @@
-.container {
+.profile-container {
 	display: flex;
+	flex: 1;
 	flex-direction: column;
-	align-items: center;
-	justify-content: space-between;
-	height: 100vh;
+	padding: 1.8rem;
 }
 
-.title {
+.profile-title {
 	align-self: flex-start;
-	font-size: 24px;
-	font-weight: 600;
+	font-family: var(--font-family);
+	font-size: var(--font-size-h3);
+	font-weight: var(--font-weight-semibold);
+	color: var(--color-text-strong);
+}
+
+.profile-tab-container {
+	display: flex;
+	flex: 1;
+	flex-direction: column;
+}
+
+.profile-content {
+	flex: 1;
+	width: 22rem;
+	height: 100%;
+	margin: 0 auto;
+}
+
+.profile-tab {
+	padding: 0.5rem 1rem;
+	font-family: var(--font-family);
+	font-size: var(--font-size-h4);
+	font-weight: var(--font-weight-regular);
+	color: var(--color-text-weak);
+}
+
+.profile-active-tab {
+	font-weight: var(--font-weight-semibold);
+	color: var(--color-text-strong);
+}
+
+.profile-container > button {
+	align-self: flex-start;
+	width: 15rem;
 }
