--- a/apps/frontend/src/pages/profile/libs/components/user-details/libs/components/profile-form/styles.module.css
+++ b/apps/frontend/src/pages/profile/libs/components/user-details/libs/components/profile-form/styles.module.css
@@ -1,10 +1,21 @@
 .form {
 	display: flex;
 	flex-direction: column;
-	gap: 1.8rem;
-	margin-bottom: 1.8rem;
+	gap: 30px;
 }
 
 .form > button {
 	width: 50%;
+}
+
+@media screen and (width <= 768px) {
+	.form > button {
+		width: 100%;
+	}
+}
+
+@media screen and (width <= 480px) {
+	.form {
+		gap: 16px;
+	}
 }
