refactor(backend/frontend): rename UserProfile, update related validation schemas ss-185

--- a/apps/frontend/src/pages/profile/libs/components/user-details/libs/components/profile-form/styles.module.css
+++ b/apps/frontend/src/pages/profile/libs/components/user-details/libs/components/profile-form/styles.module.css
@@ -4,12 +4,12 @@
 	gap: 30px;
 }
 
-.form > button {
+.form-button {
 	width: 50%;
 }
 
 @media screen and (width <= 768px) {
-	.form > button {
+	.form-button {
 		width: 100%;
 	}
 }
